fixing canvas flickering and wrong mouse position-render image in original size

--- a/client/src/styles/Diagnosis/editing-canvas.module.scss
+++ b/client/src/styles/Diagnosis/editing-canvas.module.scss
@@ -1,5 +1,8 @@
 .canvas-cont {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1210px;
     aspect-ratio: 16/9;
     overflow: scroll;
     border: 2px solid var(--color-gray);
@@ -30,9 +33,4 @@
     padding: 1rem 1.75rem;
     font-size: 1.75rem;
     color: #fff;
-}
-
-.main-canvas{
-    width: 100%;
-    height: 100%;
 }
